# jupsiamar-Read-Write-and-Plot-from-api

./: README.md  main.py  plot.py  pyproject.toml  read.py  weather.txt  write.py
